[metadata]
name = beelisete
version = file:VERSION
description =
long_description = file:README.md
long_description_content_type = text/markdown
author = Astremy, DrLazor, Pilna
author_email = astremy.com@gmail.com, julien.castiaux@gmail.com, pilna@outlook.fr
url = https://github.com/Julien00859/Beelisete
download_url = https://pypi.drlazor.be/aioircd/
license = MIT
